# ChangeLog for x11-plugins/gkrellm-gamma
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-gamma/Attic/ChangeLog,v 1.15 2007/05/07 17:30:24 dertobi123 Exp $

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  gkrellm-gamma-2.03-r1.ebuild:
  ppc stable, bug #176144

  26 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gkrellm-gamma-2.03-r1.ebuild:
  Stable on sparc wrt #176144

  26 Apr 2007; Raúl Porcel <armin76@gentoo.org>
  gkrellm-gamma-2.03-r1.ebuild:
  x86 stable wrt #176144

  22 Mar 2007; Jim Ramsay <lack@gentoo.org> gkrellm-gamma-2.03-r1.ebuild:
  Fixed X11 library location (bug 166556)

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gkrellm-gamma-2.03.ebuild:
  Stable on sparc

*gkrellm-gamma-2.03-r1 (09 Mar 2007)

  09 Mar 2007; Jim Ramsay <lack@gentoo.org> +gkrellm-gamma-2.03-r1.ebuild:
  Fixed TEXTREL QA warning by linking to shared libXxf86vm instead of static one

  09 Mar 2007; Jim Ramsay <lack@gentoo.org> gkrellm-gamma-2.03.ebuild:
  Updated to use new gkrellm-plugin eclass

  22 Feb 2007; Jim Ramsay <lack@gentoo.org> +metadata.xml:
  Accepting maintainership

  05 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gkrellm-gamma-2.03.ebuild:
  Keyworded ~sparc wrt #151446

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  06 Nov 2004; <pyrania@gentoo.org> gkrellm-gamma-2.03.ebuild:
  Marked stable on x86.

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  gkrellm-gamma-2.03.ebuild:
  Masked gkrellm-gamma-2.03.ebuild stable for ppc

  13 Jun 2004; David Holm <dholm@gentoo.org> gkrellm-gamma-2.03.ebuild:
  Added to ~ppc.

*gkrellm-gamma-2.03 (13 Jun 2004)

  13 Jun 2004; <pyrania@gentoo.org> +gkrellm-gamma-2.03.ebuild:
  Initial import. Closing bug #52748.
