@@ -1,3 +1,0 @@
-MD5 38d6f122fce67abd042bebd68361300d gkrellm-gamma-2.03.tar.gz 24655
-RMD160 db9a8dfbc280637e7e91135cc192a6264e0cf9c9 gkrellm-gamma-2.03.tar.gz 24655
-SHA256 d0a631e0570d437ff6bf0635567be368a07990df872501fad258c30d6a1775e2 gkrellm-gamma-2.03.tar.gz 24655
