@@ -1,17 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-gamma/Attic/gkrellm-gamma-2.03.ebuild,v 1.9 2007/03/14 14:22:56 lack Exp $
-
-inherit gkrellm-plugin
-
-IUSE=""
-DESCRIPTION="A gamma control plugin for gkrellm"
-HOMEPAGE="http://sweb.cz/tripie/gkrellm/gamma/"
-SRC_URI="http://sweb.cz/tripie/gkrellm/gamma/dist/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="2"
-KEYWORDS="sparc ppc x86"
-
-PLUGIN_SO=gamma.so
-
