@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellm-gamma
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-gamma/Attic/ChangeLog,v 1.15 2007/05/07 17:30:24 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellm-gamma/Attic/ChangeLog,v 1.16 2007/06/12 21:03:22 lack Exp $
+
+  12 Jun 2007; Jim Ramsay <lack@gentoo.org> -gkrellm-gamma-2.03.ebuild:
+  Old version cleanup
 
   07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   gkrellm-gamma-2.03-r1.ebuild:
